--- a/styles.scss
+++ b/styles.scss
@@ -6,9 +6,9 @@
 /*(sub-heading at the top of the app UI)*/
 $pale_violet: hsl(276, 100%, 81%);
 /*(chat on the left)*/
-$moderate_violet: hsl(276, 55%, 52%);
+$moderate_violet: hsl(276, 55%, 90%);
 /*(chat on the right)*/
-$desaturated_dark_violet: hsl(271, 15%, 43%);
+$desaturated_dark_violet: white;
 /*(placeholder text)*/
 $grayish_blue: hsl(206, 6%, 79%);
 /*(main heading)*/
@@ -30,19 +30,16 @@ $light_violet: hsl(264, 100%, 61%);
 }
 
 body {
-  //position: absolute;
   min-height: 100%;
-  display: flex;
+  background: lightblue;
   font-family: "Rubik", sans-serif;
   font-size: 16px;
+  display: flex;
   align-items: center;
-  background: lightblue;
 }
 .wrapper {
-  //  max-width: 100%;
 }
 .bg {
-  //position: relative;
   background: $moderate_violet;
   height: 80vh;
   width: 30vw;
@@ -103,4 +100,60 @@ body {
   margin-bottom: -10px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
+}
+.wrapper-msg-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.wrapper-msg-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.walker-msg {
+  border-radius: 12px;
+  border-bottom-left-radius: 5px;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  max-width: 55%;
+  background: $moderate_violet;
+}
+.customer-msg {
+  border-radius: 12px;
+  border-bottom-right-radius: 5px;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  max-width: 60%;
+  background: $desaturated_dark_violet;
+}
+.wrapper-imgs {
+  margin-right: 0.5rem;
+}
+.dog {
+  border-radius: 12px;
+  margin-left: 0.5rem;
+  width: 60px;
+  height: auto;
+}
+.offer {
+  max-width: 70%;
+  background: linear-gradient($light_magenta, $light_violet);
+  color: white;
+  padding: 1rem;
+  //display: flex;
+  align-items: center;
+  svg {
+    margin-right: 10px;
+  }
+  span {
+    font-weight: 500;
+    font-size: larger;
+  }
+}
+
+.price {
+  display: flex;
+  font-weight: 500;
+  justify-content: space-between;
 }
